update sign up, doc_types and user_types
